Add localization & responsive UI

--- a/lib/src/shared/localizations/app_en.arb
+++ b/lib/src/shared/localizations/app_en.arb
@@ -1,10 +1,68 @@
 
 {
-  "userName": "Username",
+  "userName": "User name",
   "password": "Password",
   "confirm": "Confirm",
   "home": "Home",
   "upload": "Upload",
   "userManager": "UserManager",
-  "profile": "Profile"
+  "profile": "Profile",
+  "dashboard": "Dashboard",
+  "overview": "Overview",
+  "pages": "PAGES",
+  "comments": "COMMENTS",
+  "users": "USERS",
+  "videos": "VIDEOS",
+  "showAverage": "Show Average",
+  "userByDevice": "User by device",
+  "desktop": "Desktop",
+  "tablet": "Tablet",
+  "mobile": "Mobile",
+  "june": "June",
+  "may": "May",
+  "april": "April",
+  "myProfile": "My Profile",
+  "edit": "Edit",
+  "firstName": "First Name",
+  "lastName": "Last Name",
+  "middleName": "Middle Name",
+  "email": "Email",
+  "phoneNumber": "Phone Number",
+  "gender": "Gender",
+  "job": "Job",
+  "birthday": "Birthday",
+  "enrolled": "Enrolled",
+  "changeImage": "Change Image",
+  "darkMode": "Dark Mode",
+  "changeLanguage": "Change Language",
+  "logOut": "LogOut",
+  "saveEdit": "Save Edit",
+  "male": "Male",
+  "female": "Female",
+  "another": "Another",
+  "selectAnItem": "Select an Item",
+  "showProfile": "Show Profile",
+  "addUser": "Add User",
+  "userList": "User List",
+  "addPhoto": "Add Photo",
+  "name": "Name",
+  "addNewUser": "Add New User",
+  "approvedVideo": "Approved Video",
+  "title": "Title",
+  "description": "Description",
+  "publisher": "Publisher",
+  "publisherDate": "Publisher Date",
+  "videoList": "Video List",
+  "uploadYourVideo": "Upload Your Video",
+  "uploadVideo": "Upload Video",
+  "acceptedFormates": "Accepted formates: avi, mkv, mp4",
+  "selectVideo": "Selected video to upload (or drag and drop)",
+  "views": "Views",
+  "comment": "Comment",
+  "addComment": "Add a Comment...",
+  "deleteVideo": "Delete Video",
+  "cancel": "Cancel",
+  "deletedVideoMessage": "Are you sure you want to delete this video?",
+  "deletedUserMessage": "Are you sure you want to delete this user?",
+  "deleteUser": "Delete User"
 }
