--- a/lib/src/shared/localizations/app_fa.arb
+++ b/lib/src/shared/localizations/app_fa.arb
@@ -6,5 +6,63 @@
   "home": "خانه",
   "upload": "بارگذاری",
   "userManager": "مدیریت کاربران",
-  "profile": "پروفایل"
+  "profile": "پروفایل",
+  "dashboard": "پنل",
+  "overview": "نمای کلی",
+  "pages": "صفحات",
+  "comments": "نظرات",
+  "users": "کاربران",
+  "videos": "ویدیوها",
+  "showAverage": "مشاهده میانگین",
+  "userByDevice": "کاربران بر اساس دستگاه",
+  "desktop": "دسکتاپ",
+  "tablet": "تبلت",
+  "mobile": "موبایل",
+  "june": "خرداد",
+  "may": "اردیبهشت",
+  "april": "فروردین",
+  "myProfile": "پروفایل من",
+  "edit": "ویرایش",
+  "firstName": "نام",
+  "lastName": "نام خانوادگی",
+  "middleName": "نام میانی",
+  "email": "ایمیل",
+  "phoneNumber": "شماره تلفن",
+  "gender": "جنسیت",
+  "job": "شغل",
+  "birthday": "تاریخ تولد",
+  "enrolled": "تاریخ ثبت نام",
+  "changeImage": "تغییر عکس",
+  "darkMode": "تم تاریک",
+  "changeLanguage": "تغییر زبان",
+  "logOut": "خروج",
+  "saveEdit": "ذخیره تغییرات",
+  "male": "مرد",
+  "female": "زن",
+  "another": "دیگر",
+  "selectAnItem": "یک گزینه را انتخاب کنید",
+  "showProfile": "مشاهده پروفایل",
+  "addUser": "اضافه کردن کاربر",
+  "userList": "لیست کاربران",
+  "addPhoto": "اضافه کردن تصویر",
+  "name": "نام",
+  "addNewUser": "افزودن کاربر جدید",
+  "approvedVideo": "تائید ویدیو",
+  "title": "عنوان",
+  "description": "مشخصات",
+  "publisher": "منتشرکننده",
+  "publisherDate": "تاریخ انتشار",
+  "videoList": "لیست ویدیوها",
+  "uploadYourVideo": "بارگذاری ویدیو من",
+  "uploadVideo": "بارگذاری ویدیو",
+  "acceptedFormates": "فرمت های قابل پذیرش: mp4, mkv, avi",
+  "selectVideo": "برای بارگذاری ویدیو را انتخاب کنید(یا بکشید و اینجا بندازید)",
+  "views": "مشاهده",
+  "comment": "نظرات",
+  "addComment": "اضافه کردن نظر...",
+  "deleteVideo": "حذف ویدیو",
+  "cancel": "لغو",
+  "deletedVideoMessage": "آیا از حذف ویدیو مطمئن هستید؟",
+  "deletedUserMessage": "آیا از حذف کاربر مطمئن هستید؟",
+  "deleteUser": "حذف کاربر"
 }
